<resources>
    <string name="app_name">JSON Fetching</string>
    <string name="fetch_data">Fetch Data</string>
    <string name="name">Name :</string>
    <string name="age">Age :</string>
    <string name="education">Education :</string>
    <string name="class_text">Class :</string>
    <string name="board">Board :</string>
    <string name="year">Year :</string>
    <string name="skills">Skills :</string>
    <string name="address">Address :</string>
    <string name="birthPlace">Birth Place :</string>
    <string name="current">Current :</string>
</resources>
