<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/json_url"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/fetch_json"
        android:text="@string/fetch_data"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/black"
            android:text="@string/name"
            android:textSize="@dimen/defined_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/name"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="7dp"
            android:textSize="@dimen/fetched_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/black"
            android:text="@string/age"
            android:textSize="@dimen/defined_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/age"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="7dp"
            android:textSize="@dimen/fetched_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <RelativeLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/education_text"
            android:textColor="@color/black"
            android:text="@string/education"
            android:textSize="@dimen/defined_text"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/class_ll"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/education_text"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:text="@string/class_text"
                android:textSize="@dimen/defined_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/mClass"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="7dp"
                android:textSize="@dimen/fetched_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/board_ll"
            android:layout_below="@id/class_ll"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/education_text"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:text="@string/board"
                android:textSize="@dimen/defined_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/board"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="7dp"
                android:textSize="@dimen/fetched_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/year_ll"
            android:layout_below="@id/board_ll"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/education_text"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:text="@string/year"
                android:textSize="@dimen/defined_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/year"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="7dp"
                android:textSize="@dimen/fetched_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_below="@id/year_ll"
            android:id="@+id/class_ll2"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/education_text"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/class_text"
                android:textColor="@color/black"
                android:textSize="@dimen/defined_text" />

            <TextView
                android:id="@+id/mClass2"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="7dp"
                android:textSize="@dimen/fetched_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/board_ll2"
            android:layout_below="@id/class_ll2"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/education_text"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:text="@string/board"
                android:textSize="@dimen/defined_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/board2"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="7dp"
                android:textSize="@dimen/fetched_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/board_ll2"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/education_text"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:text="@string/year"
                android:textSize="@dimen/defined_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/year2"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="7dp"
                android:textSize="@dimen/fetched_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_centerVertical="true"
            android:id="@+id/address_text"
            android:textColor="@color/black"
            android:text="@string/address"
            android:textSize="@dimen/defined_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/birthPlace_ll"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/address_text"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:text="@string/birthPlace"
                android:textSize="@dimen/defined_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/birth_place"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="7dp"
                android:textSize="@dimen/fetched_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_below="@id/birthPlace_ll"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/address_text"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:text="@string/current"
                android:textSize="@dimen/defined_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/current"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="7dp"
                android:textSize="@dimen/fetched_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/black"
            android:text="@string/skills"
            android:textSize="@dimen/defined_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/skills"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="7dp"
            android:textSize="@dimen/fetched_text"            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>

</ScrollView>